--- a/woodworking.html
+++ b/woodworking.html
@@ -162,7 +162,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; TecboyLabs 2018</p>
+                    <p>Copyright &copy; TecboyLabs <script type="text/javascript"> document.write(new Date().getFullYear());</script></p>
                 </div>
             </div>
         </footer>
