--- a/about.html
+++ b/about.html
@@ -48,13 +48,10 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="active">
-                        <a href="about.html">About</a>
-                    </li>
                     <li>
-                        <a href="contact.html">Contact</a>
+                        <a href="index.html">Home</a>
                     </li>
-                    <li class="dropdown">
+					<li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Services <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li>
@@ -72,8 +69,11 @@
                         </ul>
                     </li>
 					<li>
-                        <a href="faq.html">FAQ</a>
+                        <a href="contact.html">Contact</a>
                     </li>
+					<li>
+                        <a href="about.html">About</a>
+					</li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -106,32 +106,6 @@
                 <h2>Maker, Creator and Inventor</h2>
                 <p>My name is Jeffrey Reed and I enjoy designing and bringing ideas to life using a combination of modern tools along with traditional methods.</p>
                 <p>Western New York’s premiere design and fabrication studio proudly serving WNY since 2014. I have roughly 25 years of design and fabrication experience!</p>
-            </div>
-        </div>
-        <!-- /.row -->
-		
-        <!-- Our Customers -->
-        <div class="row">
-            <div class="col-lg-12">
-                <h2 class="page-header">Our Customers</h2>
-            </div>
-            <div class="col-md-2 col-sm-4 col-xs-6">
-                <img class="img-responsive customer-img" src="http://placehold.it/500x300" alt="">
-            </div>
-            <div class="col-md-2 col-sm-4 col-xs-6">
-                <img class="img-responsive customer-img" src="http://placehold.it/500x300" alt="">
-            </div>
-            <div class="col-md-2 col-sm-4 col-xs-6">
-                <img class="img-responsive customer-img" src="http://placehold.it/500x300" alt="">
-            </div>
-            <div class="col-md-2 col-sm-4 col-xs-6">
-                <img class="img-responsive customer-img" src="http://placehold.it/500x300" alt="">
-            </div>
-            <div class="col-md-2 col-sm-4 col-xs-6">
-                <img class="img-responsive customer-img" src="http://placehold.it/500x300" alt="">
-            </div>
-            <div class="col-md-2 col-sm-4 col-xs-6">
-                <img class="img-responsive customer-img" src="http://placehold.it/500x300" alt="">
             </div>
         </div>
         <!-- /.row -->
