--- a/woodworking.html
+++ b/woodworking.html
@@ -52,12 +52,9 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="about.html">About</a>
+                        <a href="index.html">Home</a>
                     </li>
-                    <li>
-                        <a href="contact.html">Contact</a>
-                    </li>
-                    <li class="dropdown">
+					<li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Services <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li>
@@ -75,8 +72,11 @@
                         </ul>
                     </li>
 					<li>
-                        <a href="faq.html">FAQ</a>
+                        <a href="contact.html">Contact</a>
                     </li>
+					<li>
+                        <a href="about.html">About</a>
+					</li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
