--- a/index.html
+++ b/index.html
@@ -135,16 +135,16 @@
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="page-header">
-                    Serving WNY since 2014!<small>  info@tecboylabs.com | (716) 435-5062</small>
+                    WNY’s premiere fabrication lab since 2014
                 </h1>
             </div>
             <div class="col-md-4">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h4><i class="fa fa-fw fa-check"></i>Custom Turnkey Solutions</h4>
+                        <h4><i class="fa fa-fw fa-check"></i>Custom Fabricated Solutions</h4>
                     </div>
                     <div class="panel-body">
-                        <p>We deliver custom solutions that work right out the gate.</p>
+                        <p>We deliver custom fabricated solutions that are exactly what our customers require.</p>
                     </div>
                 </div>
             </div>
@@ -180,6 +180,9 @@
             <div class="row">
                 <div class="col-lg-12">
                     <p>Copyright &copy; TecboyLabs <script type="text/javascript"> document.write(new Date().getFullYear());</script></p>
+			 <div align="center">
+				 info@tecboylabs.com | (716) 435-5062
+			</div> 
                 </div>
             </div>
         </footer>
