--- a/contact.html
+++ b/contact.html
@@ -108,10 +108,10 @@
             <div class="col-md-4">
                 <h3>Contact Details</h3>
                 <p>
-                    actual address?<br>Buffalo, NY 14207<br>
+                    89 Roswell Ave.<br>Tonawanda, NY 14207<br>
                 </p>
                 <p><i class="fa fa-phone"></i> 
-                    <abbr title="Phone">P</abbr>: (716)435-5062</p>
+                    <abbr title="Phone">P</abbr>: (716) 435-5062</p>
                 <p><i class="fa fa-envelope-o"></i> 
                     <abbr title="Email">E</abbr>: <a href="mailto:info@tecboylabs.com">info@tecboylabs.com</a>
                 </p>
