--- a/cnc.html
+++ b/cnc.html
@@ -90,11 +90,11 @@
         <!-- Page Heading/Breadcrumbs -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">3D Printing</h1>
+                <h1 class="page-header">CNC</h1>
                 <ol class="breadcrumb">
                     <li><a href="index.html">Home</a>
                     </li>
-                    <li class="active">3D Printing</li>
+                    <li class="active">CNC</li>
                 </ol>
             </div>
         </div>
