--- a/about.html
+++ b/about.html
@@ -55,16 +55,19 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Services <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li>
+                                <a href="3d-printing.html">3D Printing</a>
+                            </li>
+							<li>
+                                <a href="cnc.html">CNC</a>
+                            </li>
+							<li>
+                                <a href="electronics.html">Electronics</a>
+                            </li>
+							<li>
                                 <a href="laser-engraving.html">Laser Engraving</a>
                             </li>
                             <li>
-                                <a href="3d-printing.html">3D Printing</a>
-                            </li>
-                            <li>
                                 <a href="woodworking.html">Woodworking</a>
-                            </li>
-                            <li>
-                                <a href="electronics.html">Electronics</a>
                             </li>
                         </ul>
                     </li>
