--- a/contact.html
+++ b/contact.html
@@ -55,16 +55,19 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Services <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li>
+                                <a href="3d-printing.html">3D Printing</a>
+                            </li>
+							<li>
+                                <a href="cnc.html">CNC</a>
+                            </li>
+							<li>
+                                <a href="electronics.html">Electronics</a>
+                            </li>
+							<li>
                                 <a href="laser-engraving.html">Laser Engraving</a>
                             </li>
                             <li>
-                                <a href="3d-printing.html">3D Printing</a>
-                            </li>
-                            <li>
                                 <a href="woodworking.html">Woodworking</a>
-                            </li>
-                            <li>
-                                <a href="electronics.html">Electronics</a>
                             </li>
                         </ul>
                     </li>
@@ -138,7 +141,7 @@
         <!-- Contact Form -->
         <!-- In order to set the email address and subject line for the contact form go to the bin/contact_me.php file. -->
         <div class="row">
-            <div class="col-md-8">
+            <div class="col-md-8 col-lg-offset-2 col-lg-8">
                 <h3>Send us a Message</h3>
                 <form name="sentMessage" id="contactForm" novalidate>
                     <div class="control-group form-group">
