--- a/contact.html
+++ b/contact.html
@@ -105,9 +105,9 @@
             <!-- Map Column -->
             <div class="col-md-8">
                 <!-- Embedded Google Map -->
-                <iframe width="100%" height="400px" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?hl=en&amp;ie=UTF8&amp;ll=37.0625,-95.677068&amp;spn=56.506174,79.013672&amp;t=m&amp;z=4&amp;output=embed"></iframe>				
+                <iframe width="100%" height="400px" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?hl=en&amp;ie=UTF8&amp;ll=42.959368,-78.910930&amp;spn=42.96,-78.99&amp;t=m&amp;z=4&amp;output=embed"></iframe>				
             </div>
-            <!-- Contact Details Column -->
+            <!-- Contact Details Column  https://www.google.com/maps/embed/v1/place?q=89%20roswell%20ave%20buffalo%20ny&key=...   -->
             <div class="col-md-4">
                 <h3>Contact Details</h3>
                 <p>
