--- a/electronics.html
+++ b/electronics.html
@@ -164,8 +164,9 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; TecboyLabs <script type="text/javascript"> document.write(new Date().getFullYear());</script></p>
-                </div>
+                    <p>Copyright &copy; TecboyLabs <script type="text/javascript"> document.write(new Date().getFullYear());</script></p> 
+                	<div align="center">info@tecboylabs.com | (716) 435-5062</div>
+				</div>
             </div>
         </footer>
 
