--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 </div>
             </div>
 			<div class="item">
-                <div class="fill" style="background-image:url('http://carbide3d.com/assets/images/land/spindle3.jpg');"></div>
+                <div class="fill" style="background-image:url('http://shop.nextwaveautomation.com/images/HD4%20EXTENDED%20-%20HERO%20-%20WEB.jpg');"></div>
                 <div class="carousel-caption">
                     <h2>CNC</h2>
                 </div>
@@ -174,7 +174,7 @@
                         <h4><i class="fa fa-fw fa-compass"></i> Best Customer service</h4>
                     </div>
                     <div class="panel-body">
-                        <p>At TecboyLabs the customers are the most important part of the process, their ideas are what fuel all of our creations.</p>
+                        <p>At Tecboy Labs the customers are the most important part of the process, their ideas are what fuel all of our creations.</p>
                     </div>
                 </div>
             </div>
@@ -189,8 +189,9 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; TecboyLabs <script type="text/javascript"> document.write(new Date().getFullYear());</script></p> 
-                	<div align="center">info@tecboylabs.com | (716) 435-5062</div>
+                    <p>Copyright &copy; TecboyLabs <script type="text/javascript">
+					document.write(new Date().getFullYear());</script>
+					<div align="center">info@tecboylabs.com | (716) 435-5062</div></p>
 				</div>
             </div>
         </footer>
