--- a/index.html
+++ b/index.html
@@ -189,9 +189,11 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; TecboyLabs <script type="text/javascript">
-					document.write(new Date().getFullYear());</script>
-					<div align="center">info@tecboylabs.com | (716) 435-5062</div></p>
+					<div style="text-align:center">
+    					<span style="float:left">Copyright &copy; TecboyLabs <script type="text/javascript">document.write(new Date().getFullYear());</script></span>
+    					<span style="float:right"></span>
+    					<span>info@tecboylabs.com | (716) 435-5062</span>
+					</div>
 				</div>
             </div>
         </footer>
