--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
+                        <a href="">info@tecboylabs.com | (716) 435-5062</a>
+                    </li>
+					<li>
                         <a href="index.html">Home</a>
                     </li>
 					<li class="dropdown">
@@ -189,11 +192,8 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-					<div style="text-align:center">
-    					<span style="float:left">Copyright &copy; TecboyLabs <script type="text/javascript">document.write(new Date().getFullYear());</script></span>
-    					<span style="float:right"></span>
-    					<span>info@tecboylabs.com | (716) 435-5062</span>
-					</div>
+                    <p>Copyright &copy; TecboyLabs <script type="text/javascript"> document.write(new Date().getFullYear());</script></p> 
+                	<div align="center">info@tecboylabs.com | (716) 435-5062</div>
 				</div>
             </div>
         </footer>
