--- a/3d-printing.html
+++ b/3d-printing.html
@@ -111,28 +111,12 @@
                     <!-- Indicators -->
                     <ol class="carousel-indicators">
                         <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                        <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-                        <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-						<li data-target="#carousel-example-generic" data-slide-to="3"></li>
-						<li data-target="#carousel-example-generic" data-slide-to="4"></li>
                     </ol>
 
                     <!-- Wrapper for slides -->
                     <div class="carousel-inner">
                         <div class="item active">
-                            <img class="img-responsive" src="images/shovel-handle.jpg" alt="">
-                        </div>
-                        <div class="item">
-                            <img class="img-responsive" src="images/20150801_1317412.jpg" alt="">
-                        </div>
-                        <div class="item">
-                            <img class="img-responsive" src="images/img_0127.jpg" alt="">
-                        </div>
-						<div class="item">
-                            <img class="img-responsive" src="images/img_0130.jpg" alt="">
-                        </div>
-						<div class="item">
-                            <img class="img-responsive" src="images/big_panel.jpg" alt="">
+                            <img class="img-responsive" src="Stacker_S4_parts.png" alt="">
                         </div>
                     </div>
 
