--- a/3d-printing.html
+++ b/3d-printing.html
@@ -133,7 +133,8 @@
             <div class="col-md-4 col-lg-7">
                 <h3>We are proud to offer large scale 3D printing!</h3>
                 <p>We use Stacker S4 3D printers for our big and small prints. These are very versatile and reliable printers for small scale production runs, large part printing and quick prototyping. Stacker is made in the USA and these printers are truly industrial grade 3D printers that are affordable, accurate and reliable.</p>
-                </ul>
+                <p>At Tecboy Labs, we specialize in the creation of highly accurate 3d printed parts exact to your standards. Our customers demand the highest quality, and with our industrial 3D printers, we can deliver your items in nearly any size, color and even material!</p>
+				</ul>
             </div>
 
         </div>
