--- a/contact.html
+++ b/contact.html
@@ -110,28 +110,15 @@
             <!-- Contact Details Column  https://www.google.com/maps/embed/v1/place?q=89%20roswell%20ave%20buffalo%20ny&key=...   -->
             <div class="col-md-4">
                 <h3>Contact Details</h3>
-                <p>
-                    89 Roswell Ave.<br>Tonawanda, NY 14207<br>
-                </p>
+                <p><br>Buffalo, NY<br></p>
                 <p><i class="fa fa-phone"></i> 
                     <abbr title="Phone">P</abbr>: (716) 435-5062</p>
                 <p><i class="fa fa-envelope-o"></i> 
                     <abbr title="Email">E</abbr>: <a href="mailto:info@tecboylabs.com">info@tecboylabs.com</a>
                 </p>
-                <p><i class="fa fa-clock-o"></i> 
-                    <abbr title="Hours">H</abbr>: Monday - Friday: 9:00 AM to 5:00 PM</p>
                 <ul class="list-unstyled list-inline list-social-icons">
                     <li>
-                        <a href="#"><i class="fa fa-facebook-square fa-2x"></i></a>
-                    </li>
-                    <li>
-                        <a href="#"><i class="fa fa-linkedin-square fa-2x"></i></a>
-                    </li>
-                    <li>
-                        <a href="#"><i class="fa fa-twitter-square fa-2x"></i></a>
-                    </li>
-                    <li>
-                        <a href="#"><i class="fa fa-google-plus-square fa-2x"></i></a>
+                        <a href="https://www.facebook.com/Tecboy-Labs-171593353403686/"><i class="fa fa-facebook-square fa-2x"></i></a>
                     </li>
                 </ul>
             </div>
