--- a/3d-printing.html
+++ b/3d-printing.html
@@ -116,7 +116,7 @@
                     <!-- Wrapper for slides -->
                     <div class="carousel-inner">
                         <div class="item active">
-                            <img class="img-responsive" src="Stacker_S4_parts.png" alt="">
+                            <img class="img-responsive" src="images/Stacker_S4_parts.png" alt="">
                         </div>
                     </div>
 
