--- a/cnc.html
+++ b/cnc.html
@@ -52,6 +52,9 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
+                        <a href="contact.html">info@tecboylabs.com | (716) 435-5062</a>
+                    </li>
+					<li>
                         <a href="index.html">Home</a>
                     </li>
 					<li class="dropdown">
@@ -156,13 +159,6 @@
 				<p>As you can see, there are virtually no limits to what can be created by 3d printing and the future will see explosive growth and even more potential.</p>
 				<p>Hopefully these examples have inspired your wanting to experience 3d printing, if so contact us so we can get you started and have a design of your choosing to show family and friends.</p>
                 <p>Color choices include all of the standards colors of the rainbow (red, orange, yellow, green, blue, purple) in addition to black, white, gray, and even semi-clear. If your design requires a color not listed, please ask us as we can probably print it. (such as glow-in-the-dark!)</p>
-				<h3>Project Details</h3>
-                <ul>
-                    <li>Lorem Ipsum</li>
-                    <li>Dolor Sit Amet</li>
-                    <li>Consectetur</li>
-                    <li>Adipiscing Elit</li>
-                </ul>
             </div>
 
         </div>
@@ -173,8 +169,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; TecboyLabs <script type="text/javascript"> document.write(new Date().getFullYear());</script></p> 
-                	<div align="center">info@tecboylabs.com | (716) 435-5062</div>
+                    <p>Copyright &copy; TecboyLabs <script type="text/javascript"> document.write(new Date().getFullYear());</script></p>
 				</div>
             </div>
         </footer>
