--- a/electronics.html
+++ b/electronics.html
@@ -52,6 +52,9 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
+                        <a href="contact.html">info@tecboylabs.com | (716) 435-5062</a>
+                    </li>
+					<li>
                         <a href="index.html">Home</a>
                     </li>
 					<li class="dropdown">
@@ -146,13 +149,6 @@
                 <h3>Project Description</h3>
                 <p>If you have a need for custom electronics, as simple as a small circuit for a single purpose, or maybe you need a off-the-shelf micro-computer to run your next project such as a Raspberry Pi or an Arduino, we have you covered. Just inform us as to what your requirements are and we can do the rest.</p>
                 <p>Speaking of Raspberry Pi, these gallery photos are of a prototype classic video game emulator running on a Raspberry Pi 2 with a 7 inch touchscreen display. These small micro-computer boards have opened up many possibilities that were unheard of not too long ago.</p>
-				<h3>Project Details</h3>
-                <ul>
-                    <li>Lorem Ipsum</li>
-                    <li>Dolor Sit Amet</li>
-                    <li>Consectetur</li>
-                    <li>Adipiscing Elit</li>
-                </ul>
             </div>
 
         </div>
@@ -164,8 +160,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; TecboyLabs <script type="text/javascript"> document.write(new Date().getFullYear());</script></p> 
-                	<div align="center">info@tecboylabs.com | (716) 435-5062</div>
+                    <p>Copyright &copy; TecboyLabs <script type="text/javascript"> document.write(new Date().getFullYear());</script></p>
 				</div>
             </div>
         </footer>
