--- a/about.html
+++ b/about.html
@@ -49,6 +49,9 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
+                        <a href="contact.html">info@tecboylabs.com | (716) 435-5062</a>
+                    </li>
+					<li>
                         <a href="index.html">Home</a>
                     </li>
 					<li class="dropdown">
@@ -122,8 +125,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; TecboyLabs <script type="text/javascript"> document.write(new Date().getFullYear());</script></p> 
-                	<div align="center">info@tecboylabs.com | (716) 435-5062</div>
+                    <p>Copyright &copy; TecboyLabs <script type="text/javascript"> document.write(new Date().getFullYear());</script></p>
 				</div>
             </div>
         </footer>
