--- a/contact.html
+++ b/contact.html
@@ -49,6 +49,9 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
+                        <a href="contact.html">info@tecboylabs.com | (716) 435-5062</a>
+                    </li>
+					<li>
                         <a href="index.html">Home</a>
                     </li>
 					<li class="dropdown">
