--- a/woodworking.html
+++ b/woodworking.html
@@ -52,6 +52,9 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
+                        <a href="contact.html">info@tecboylabs.com | (716) 435-5062</a>
+                    </li>
+					<li>
                         <a href="index.html">Home</a>
                     </li>
 					<li class="dropdown">
@@ -147,13 +150,6 @@
 				<p>The edge on this piece of wood shows one of many joinery methods to connect different pieces of wood together. The mating piece also has a similar slot and a third piece gets glued into the slot and becomes hidden when done. In case you were wondering, its color is a really dark brown stain.</p>
 				<p>These pieces of wood form the basis of a drawer. The darker top one is solid oak and the bottom ones are maple veneered plywood.</p>
 				<p>Here is an example of wood and metal working together to form a panel for a computer that allows for airflow to be directed by a fan. Notice the non pattern following holes in the black metal part, those are mounting holes for the fan.</p>
-                <h3>Project Details</h3>
-                <ul>
-                    <li>Lorem Ipsum</li>
-                    <li>Dolor Sit Amet</li>
-                    <li>Consectetur</li>
-                    <li>Adipiscing Elit</li>
-                </ul>
             </div>
 
         </div>
@@ -165,8 +161,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; TecboyLabs <script type="text/javascript"> document.write(new Date().getFullYear());</script></p> 
-                	<div align="center">info@tecboylabs.com | (716) 435-5062</div>
+                    <p>Copyright &copy; TecboyLabs <script type="text/javascript"> document.write(new Date().getFullYear());</script></p>
 				</div>
             </div>
         </footer>
