--- a/contact.html
+++ b/contact.html
@@ -106,10 +106,10 @@
         <!-- Content Row -->
         <div class="row">
             <!-- Map Column -->
-            <div class="col-md-8">
-                <!-- Embedded Google Map -->
-                <iframe width="100%" height="400px" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="//maps.google.com/maps?hl=en&amp;ie=UTF8&amp;ll=42.959368,-78.910930&amp;spn=42.96,-78.99&amp;t=m&amp;z=4&amp;output=embed"></iframe>				
-            </div>
+            <div class="col-md-6">
+                <!-- contact image -->
+                <img src="images/3d-printing-2.jpg" style="width:450px;height:300px;">
+			</div>
             <!-- Contact Details Column  https://www.google.com/maps/embed/v1/place?q=89%20roswell%20ave%20buffalo%20ny&key=...   -->
             <div class="col-md-4">
                 <h3>Contact Details</h3>
