--- a/contact.html
+++ b/contact.html
@@ -105,11 +105,9 @@
 
         <!-- Content Row -->
         <div class="row">
-            <!-- Map Column -->
-            <div class="col-md-6">
-                <!-- contact image -->
-                <img src="images/3d-printing-2.jpg" style="width:450px;height:300px;">
-			</div>
+			<div class="col-md-6">
+                <img class="img-responsive" src="images/3d-printing-2.jpg" alt="">
+            </div>
             <!-- Contact Details Column  https://www.google.com/maps/embed/v1/place?q=89%20roswell%20ave%20buffalo%20ny&key=...   -->
             <div class="col-md-4">
                 <h3>Contact Details</h3>
