--- a/woodworking.html
+++ b/woodworking.html
@@ -121,13 +121,13 @@
                     <!-- Wrapper for slides -->
                     <div class="carousel-inner">
                         <div class="item active">
-                            <img class="img-responsive" src="images/_mg_16952.jpg" alt="">
+                            <img class="img-responsive" src="images/woodworking-1.jpg" alt="">
                         </div>
                         <div class="item">
-                            <img class="img-responsive" src="images/_mg_16892.jpg" alt="">
+                            <img class="img-responsive" src="images/woodworking-2.jpg" alt="">
                         </div>
                         <div class="item">
-                            <img class="img-responsive" src="images/_mg_16932.jpg" alt="">
+                            <img class="img-responsive" src="images/woodworking-3.jpg" alt="">
                         </div>
                     </div>
 
