--- a/3d-printing.html
+++ b/3d-printing.html
@@ -114,12 +114,20 @@
                     <!-- Indicators -->
                     <ol class="carousel-indicators">
                         <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                        <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                        <li data-target="#carousel-example-generic" data-slide-to="2"></li>
                     </ol>
 
                     <!-- Wrapper for slides -->
                     <div class="carousel-inner">
                         <div class="item active">
-                            <img class="img-responsive" src="images/Stacker_S4_parts.png" alt="">
+                            <img class="img-responsive" src="images/3dprinter1.jpg" alt="">
+                        </div>
+                        <div class="item">
+                            <img class="img-responsive" src="images/3dprinter2.jpg" alt="">
+                        </div>
+                        <div class="item">
+                            <img class="img-responsive" src="images/3dprinter3.jpg" alt="">
                         </div>
                     </div>
 
