--- a/3d-printing.html
+++ b/3d-printing.html
@@ -116,18 +116,22 @@
                         <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
                         <li data-target="#carousel-example-generic" data-slide-to="1"></li>
                         <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+						<li data-target="#carousel-example-generic" data-slide-to="3"></li>
                     </ol>
 
                     <!-- Wrapper for slides -->
                     <div class="carousel-inner">
                         <div class="item active">
-                            <img class="img-responsive" src="images/3dprinter1.jpg" alt="">
+                            <img class="img-responsive" src="images/3dcar.jpg" alt="">
                         </div>
                         <div class="item">
-                            <img class="img-responsive" src="images/3dprinter2.jpg" alt="">
+                            <img class="img-responsive" src="images/3dcar2.jpg" alt="">
                         </div>
                         <div class="item">
-                            <img class="img-responsive" src="images/3dprinter3.jpg" alt="">
+                            <img class="img-responsive" src="images/3dcar3.jpg" alt="">
+                        </div>
+						<div class="item">
+                            <img class="img-responsive" src="images/3dcar4.jpg" alt="">
                         </div>
                     </div>
 
