--- a/3d-printing.html
+++ b/3d-printing.html
@@ -11,7 +11,7 @@
 	<meta name="Keywords" content="3d printing, laser engraving, woodworking, electronics, raspberry pi, arduino, laser, buffalo, custom, fabrication, custom fabrication">
 
     <title>TecboyLabs</title>
-	
+
 	<!-- favicon -->
 	<link rel="icon" type="image/x-icon" class="js-site-favicon" href="images/favicon.jpg">
 
@@ -116,7 +116,7 @@
                         <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
                         <li data-target="#carousel-example-generic" data-slide-to="1"></li>
                         <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-						<li data-target="#carousel-example-generic" data-slide-to="3"></li>
+                        <li data-target="#carousel-example-generic" data-slide-to="3"></li>
                     </ol>
 
                     <!-- Wrapper for slides -->
@@ -125,13 +125,13 @@
                             <img class="img-responsive" src="images/3dcar.jpg" alt="">
                         </div>
                         <div class="item">
-                            <img class="img-responsive" src="images/3dcar2.jpg" alt="">
+                            <img class="img-responsive" src="images/3dcar4.jpg" alt="">
                         </div>
                         <div class="item">
-                            <img class="img-responsive" src="images/3dcar3.jpg" alt="">
+                            <img class="img-responsive" src="images/3d-printer-cropped.jpg" alt="">
                         </div>
-						<div class="item">
-                            <img class="img-responsive" src="images/3dcar4.jpg" alt="">
+                        <div class="item">
+                            <img class="img-responsive" src="images/3dprinter.jpg" alt="">
                         </div>
                     </div>
 
