--- a/cnc.html
+++ b/cnc.html
@@ -11,7 +11,7 @@
 	<meta name="Keywords" content="3d printing, laser engraving, woodworking, electronics, raspberry pi, arduino, laser, buffalo, custom, fabrication, custom fabrication">
 
     <title>TecboyLabs</title>
-	
+
 	<!-- favicon -->
 	<link rel="icon" type="image/x-icon" class="js-site-favicon" href="images/favicon.jpg">
 
@@ -115,27 +115,15 @@
                     <ol class="carousel-indicators">
                         <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
                         <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-                        <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-						<li data-target="#carousel-example-generic" data-slide-to="3"></li>
-						<li data-target="#carousel-example-generic" data-slide-to="4"></li>
                     </ol>
 
                     <!-- Wrapper for slides -->
                     <div class="carousel-inner">
                         <div class="item active">
-                            <img class="img-responsive" src="images/shovel-handle.jpg" alt="">
+                            <img class="img-responsive" src="images/cnc1.jpg" alt="">
                         </div>
                         <div class="item">
-                            <img class="img-responsive" src="images/20150801_1317412.jpg" alt="">
-                        </div>
-                        <div class="item">
-                            <img class="img-responsive" src="images/img_0127.jpg" alt="">
-                        </div>
-						<div class="item">
-                            <img class="img-responsive" src="images/img_0130.jpg" alt="">
-                        </div>
-						<div class="item">
-                            <img class="img-responsive" src="images/big_panel.jpg" alt="">
+                            <img class="img-responsive" src="images/cnc2.jpg" alt="">
                         </div>
                     </div>
 
