--- a/laser-engraving.html
+++ b/laser-engraving.html
@@ -11,7 +11,7 @@
 	<meta name="Keywords" content="3d printing, laser engraving, woodworking, electronics, raspberry pi, arduino, laser, buffalo, custom, fabrication, custom fabrication">
 
     <title>TecboyLabs</title>
-	
+
 	<!-- favicon -->
 	<link rel="icon" type="image/x-icon" class="js-site-favicon" href="images/favicon.jpg">
 
@@ -116,23 +116,23 @@
                         <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
                         <li data-target="#carousel-example-generic" data-slide-to="1"></li>
                         <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-						<li data-target="#carousel-example-generic" data-slide-to="3"></li>
-						<li data-target="#carousel-example-generic" data-slide-to="4"></li>
+                        <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+                        <li data-target="#carousel-example-generic" data-slide-to="4"></li>
                     </ol>
 
                     <!-- Wrapper for slides -->
                     <div class="carousel-inner">
                         <div class="item active">
-                            <img class="img-responsive" src="images/laser1-cropped.JPG" alt="">
+                            <img class="img-responsive" src="images/laserengraving1.JPG" alt="">
                         </div>
                         <div class="item">
-                            <img class="img-responsive" src="images/Laser3.JPG" alt="">
+                            <img class="img-responsive" src="images/laserengraving2.JPG" alt="">
                         </div>
                         <div class="item">
-                            <img class="img-responsive" src="images/Laser4.JPG" alt="">
+                            <img class="img-responsive" src="images/laserengraving3.JPG" alt="">
                         </div>
-						<div class="item">
-                            <img class="img-responsive" src="images/laser5.jpg" alt="">
+                        <div class="item">
+                            <img class="img-responsive" src="images/laserengraving4.jpg" alt="">
                         </div>
                     </div>
 
@@ -149,7 +149,7 @@
             <div class="col-md-4 col-lg-7">
                 <h3>Project Description</h3>
                 <p>Permanent precise laser marking is a service we provide to the commercial and industrial manufacturers. Part Numbering and Product Branding are essential for promoting your business and customer retention. Laser engraving can be the most economical and professional way to mark your parts. Laser engraving creates a precise and permanent marking on a number of materials. Marking on precious metals, PVC, and vinyl records is NOT provided.</p>
-				
+
 				<p>Tecboy Labs provides part marking services big and small and would be delighted to discuss your part number and branding needs - give us a call at 716-435-5062 or email info@tecboylabs.com. If your brand is not on your product - your missing a resale opportunity. By engraving your company name, web site or part number you're helping to brand your company and products while growing your name recognition. Laser Engraving is a permanent marking method. On bare metals a solution is applied on the metal to interact with the laser and leave a permanent black marking on the metal. When artwork from your company logos and designs is incorporated into the marking the results are impressive. Anodized Aluminum, for example, responds well and requires no marking solutions.</p>
 				<p></p>
 				<p></p>
