cnc and electronics

--- a/cnc.html
+++ b/cnc.html
@@ -138,16 +138,11 @@
             </div>
 
             <div class="col-md-4 col-lg-7">
-                <h3>Project Description</h3>
-                <p>We're sure that by now you have heard of "3D Printing", if you haven't, it basically describes a process of depositing layers of plastic to create an object, such as this shovel handle as seen on home</p>
-				<p>Yes, you really can 3d print a chain! Of any size and with many links. This red one has 5 links, each of which are about 3/4 of an inch wide.</p>
-				<p>Even jewelery can be created such as this stretchy bracelet with a textured pattern across its outside edge.</p>
-				<p>Here is another example of a custom item that has a practical use, a yellow business card holder shaped like a laptop and the "screen" is where the cards go!</p>
-				<p>Here is an example of a large printed item. This white panel is almost 18 inches tall and at its widest, it's almost 7 inches. And yes, it tapers towards the top to about 5 inches and it is also curved! For a sense of scale, the calipers seen in the photo can open to a max of 6 inches!</p>
-				<p>As you can see, there are virtually no limits to what can be created by 3d printing and the future will see explosive growth and even more potential.</p>
-				<p>Hopefully these examples have inspired your wanting to experience 3d printing, if so contact us so we can get you started and have a design of your choosing to show family and friends.</p>
-                <p>Color choices include all of the standards colors of the rainbow (red, orange, yellow, green, blue, purple) in addition to black, white, gray, and even semi-clear. If your design requires a color not listed, please ask us as we can probably print it. (such as glow-in-the-dark!)</p>
-            </div>
+                <h3>We also now offer small scale CNC!</h3>
+                <p>Simply put, CNC stands for computer numerical control. What this means for you is our ability to do small parts machining using our desktop Nomad 883 CNC mill to create such things as circuit boards, keychains, dog tags and other small items. Even engraving can be done!</p>
+				<p>The materials we can cut include but are not limited to; plastics, soft and hard woods, aluminum, brass, copper, and in some cases even steel!</p>
+				<p>If you have some ideas on how to turn small pieces of wood, plastic or metal into something useful, please get in touch and we can help turn them into something special.</p>
+			</div>
 
         </div>
 
