--- a/electronics.html
+++ b/electronics.html
@@ -117,6 +117,8 @@
                         <li data-target="#carousel-example-generic" data-slide-to="1"></li>
                         <li data-target="#carousel-example-generic" data-slide-to="2"></li>
 						<li data-target="#carousel-example-generic" data-slide-to="3"></li>
+						<li data-target="#carousel-example-generic" data-slide-to="4"></li>
+						<li data-target="#carousel-example-generic" data-slide-to="5"></li>
                     </ol>
 
                     <!-- Wrapper for slides -->
@@ -133,6 +135,12 @@
 						<div class="item">
                             <img class="img-responsive" src="images/pi4.jpg" alt="">
                         </div>
+						<div class="item active">
+                            <img class="img-responsive" src="images/Electronics_1.jpg" alt="">
+                        </div>
+						<div class="item active">
+                            <img class="img-responsive" src="images/Electronics_2.jpg" alt="">
+                        </div>
                     </div>
 
                     <!-- Controls -->
@@ -146,9 +154,9 @@
             </div>
 
             <div class="col-md-4 col-lg-7">
-                <h3>Project Description</h3>
-                <p>If you have a need for custom electronics, as simple as a small circuit for a single purpose, or maybe you need a off-the-shelf micro-computer to run your next project such as a Raspberry Pi or an Arduino, we have you covered. Just inform us as to what your requirements are and we can do the rest.</p>
-                <p>Speaking of Raspberry Pi, these gallery photos are of a prototype classic video game emulator running on a Raspberry Pi 2 with a 7 inch touchscreen display. These small micro-computer boards have opened up many possibilities that were unheard of not too long ago.</p>
+                <h3>We can also do custom electronics for you!</h3>
+                <p>Do you wish you could play video games from when you were young? We can bring those memories back for you with a bar top multiplayer cabinet or even a more discrete handheld device, so you can play all your favorite classics from yesteryear at your convenience.</p>
+                <p>Or do you possess an old video game console and it no longer works? We might be able to give it a new lease on life, such as this Vectrex console (circa 1982!)</p>
             </div>
 
         </div>
