added titles and changed around photos

--- a/laser-engraving.html
+++ b/laser-engraving.html
@@ -134,6 +134,9 @@
                         <div class="item">
                             <img class="img-responsive" src="images/laserengraving4.jpg" alt="">
                         </div>
+						<div class="item">
+                            <img class="img-responsive" src="images/Laser_4.jpg" alt="">
+                        </div>
                     </div>
 
                     <!-- Controls -->
@@ -147,26 +150,8 @@
             </div>
 
             <div class="col-md-4 col-lg-7">
-                <h3>Project Description</h3>
-                <p>Permanent precise laser marking is a service we provide to the commercial and industrial manufacturers. Part Numbering and Product Branding are essential for promoting your business and customer retention. Laser engraving can be the most economical and professional way to mark your parts. Laser engraving creates a precise and permanent marking on a number of materials. Marking on precious metals, PVC, and vinyl records is NOT provided.</p>
-
-				<p>Tecboy Labs provides part marking services big and small and would be delighted to discuss your part number and branding needs - give us a call at 716-435-5062 or email info@tecboylabs.com. If your brand is not on your product - your missing a resale opportunity. By engraving your company name, web site or part number you're helping to brand your company and products while growing your name recognition. Laser Engraving is a permanent marking method. On bare metals a solution is applied on the metal to interact with the laser and leave a permanent black marking on the metal. When artwork from your company logos and designs is incorporated into the marking the results are impressive. Anodized Aluminum, for example, responds well and requires no marking solutions.</p>
-				<p></p>
-				<p></p>
-                <h3>LASERABLE MATERIAL</h3>
-                <ul>
-                    <li>Stainless Steel (marking only)</li>
-                    <li>Anodized Aluminum (marking only)</li>
-                    <li>Glass (marking only)</li>
-                    <li>Absolute Black Granite (marking only)</li>
-					<li>Marble (marking only)</li>
-					<li>Wood</li>
-					<li>Acrylic</li>
-					<li>Fabric</li>
-					<li>Ceramic</li>
-					<li>Denim</li>
-					<li>Cloth</li>
-                </ul>
+                <h3>We have Laser Engraving and Cutting!</h3>
+                <p>With our in-house Trotec Speedy 100 laser system we can offer laser engraving and cutting to you for countless opportunities to create that special one of a kind gift! We can even create items for your wedding day such as invitations, response and place cards!</p>
             </div>
 
         </div>
