--- a/laser-engraving.html
+++ b/laser-engraving.html
@@ -123,13 +123,13 @@
                     <!-- Wrapper for slides -->
                     <div class="carousel-inner">
                         <div class="item active">
-                            <img class="img-responsive" src="images/laserengraving1.JPG" alt="">
+                            <img class="img-responsive" src="images/laserengraving1.jpg" alt="">
                         </div>
                         <div class="item">
-                            <img class="img-responsive" src="images/laserengraving2.JPG" alt="">
+                            <img class="img-responsive" src="images/laserengraving2.jpg" alt="">
                         </div>
                         <div class="item">
-                            <img class="img-responsive" src="images/Laser_1.JPG" alt="">
+                            <img class="img-responsive" src="images/Laser_1.jpg" alt="">
                         </div>
                         <div class="item">
                             <img class="img-responsive" src="images/Laser_2.jpg" alt="">
