--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <!-- Wrapper for slides -->
         <div class="carousel-inner">
             <div class="item">
-                <div class="fill" style="background-image:url('https://i.ytimg.com/vi/O2thSsQrZUM/maxresdefault.jpg');"></div>
+                <div class="fill" style="background-image:url('images/3dcar4.jpg');"></div>
                 <div class="carousel-caption">
                     <h2>3D Printing</h2>
                 </div>
