moved about me to homepage

--- a/index.html
+++ b/index.html
@@ -151,6 +151,11 @@
                     WNY’s premiere fabrication lab since 2014
                 </h1>
             </div>
+			<div class="col-md-12">
+                <h2>Maker, Creator and Inventor</h2>
+                <p>My name is Jeffrey Reed and I enjoy designing and bringing ideas to life using a combination of modern tools along with traditional methods.</p>
+                <p>Western New York’s premiere design and fabrication studio proudly serving WNY since 2014. I have roughly 25 years of design and fabrication experience!</p>
+            </div>
             <div class="col-md-4">
                 <div class="panel panel-default">
                     <div class="panel-heading">
