--- a/index.html
+++ b/index.html
@@ -151,38 +151,33 @@
                     WNY’s premiere fabrication lab since 2014
                 </h1>
             </div>
-			<div class="col-md-12">
-                <h2>Maker, Creator and Inventor</h2>
-                <p>My name is Jeffrey Reed and I enjoy designing and bringing ideas to life using a combination of modern tools along with traditional methods.</p>
-                <p>Western New York’s premiere design and fabrication studio proudly serving WNY since 2014. I have roughly 25 years of design and fabrication experience!</p>
-            </div>
             <div class="col-md-4">
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <h4><i class="fa fa-fw fa-check"></i>Custom Fabricated Solutions</h4>
                     </div>
                     <div class="panel-body">
-                        <p>We deliver custom fabricated solutions that are exactly what our customers require.</p>
+                        <p>We deliver custom fabricated solutions that are exactly what our customers require. Have an idea and want to bring it to life? Get in touch and we can make that brilliant idea a reality.</p>
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h4><i class="fa fa-fw fa-gift"></i> Free Consultations</h4>
-                    </div>
-                    <div class="panel-body">
-                        <p>Have an idea and want to bring it to life? Get in touch and we can make that brilliant idea a reality.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <h4><i class="fa fa-fw fa-compass"></i> Best Customer service</h4>
+                        <h4><i class="fa fa-fw fa-gift"></i> Best Customer service</h4>
                     </div>
                     <div class="panel-body">
                         <p>At Tecboy Labs the customers are the most important part of the process, their ideas are what fuel all of our creations.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4><i class="fa fa-fw fa-compass"></i> Maker, Creator and Inventor</h4>
+                    </div>
+                    <div class="panel-body">
+                        <p>My name is Jeffrey Reed and I enjoy designing and bringing ideas to life using a combination of modern tools along with traditional methods. I have roughly 30 years of design and fabrication experience!</p>
                     </div>
                 </div>
             </div>
