--- a/index.html
+++ b/index.html
@@ -77,9 +77,6 @@
 					<li>
                         <a href="contact.html">Contact</a>
                     </li>
-					<li>
-                        <a href="about.html">About</a>
-					</li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -164,17 +161,17 @@
             <div class="col-md-4">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h4><i class="fa fa-fw fa-gift"></i> Best Customer service</h4>
+                        <h4><i class="fa fa-fw fa-star"></i> Best Customer service</h4>
                     </div>
                     <div class="panel-body">
-                        <p>At Tecboy Labs the customers are the most important part of the process, their ideas are what fuel all of our creations.</p>
+                        <p>At TecboyLabs, customers are the most important part of the process, their ideas are what fuel all of our creations.</p>
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h4><i class="fa fa-fw fa-compass"></i> Maker, Creator and Inventor</h4>
+                        <h4><i class="fa fa-fw fa-lightbulb-o"></i> Maker, Creator and Inventor</h4>
                     </div>
                     <div class="panel-body">
                         <p>My name is Jeffrey Reed and I enjoy designing and bringing ideas to life using a combination of modern tools along with traditional methods. I have roughly 30 years of design and fabrication experience!</p>
