reorganized and labeled all photos

--- a/index.html
+++ b/index.html
@@ -98,13 +98,13 @@
         <!-- Wrapper for slides -->
         <div class="carousel-inner">
             <div class="item">
-                <div class="fill" style="background-image:url('images/3dcar4.jpg');"></div>
+                <div class="fill" style="background-image:url('images/3d-printing/3d_printer-2.jpg');"></div>
                 <div class="carousel-caption">
                     <h2>3D Printing</h2>
                 </div>
             </div>
 			<div class="item">
-                <div class="fill" style="background-image:url('http://shop.nextwaveautomation.com/images/HD4%20EXTENDED%20-%20HERO%20-%20WEB.jpg');"></div>
+                <div class="fill" style="background-image:url('images/cnc/cnc-3.jpg');"></div>
                 <div class="carousel-caption">
                     <h2>CNC</h2>
                 </div>
