--- a/cnc.html
+++ b/cnc.html
@@ -119,16 +119,16 @@
                     <!-- Wrapper for slides -->
                     <div class="carousel-inner">
                         <div class="item active">
-                            <img class="img-responsive" src="images/cnc-1.jpg" alt="">
+                            <img class="img-responsive" src="images/cnc/cnc-1.jpg" alt="">
                         </div>
                         <div class="item">
-                            <img class="img-responsive" src="images/cnc-2.jpg" alt="">
+                            <img class="img-responsive" src="images/cnc/cnc-2.jpg" alt="">
                         </div>
 						<div class="item">
-                            <img class="img-responsive" src="images/cnc-3.jpg" alt="">
+                            <img class="img-responsive" src="images/cnc/cnc-3.jpg" alt="">
                         </div>
 						<div class="item">
-                            <img class="img-responsive" src="images/cnc-4.jpg" alt="">
+                            <img class="img-responsive" src="images/cnc/cnc-4.jpg" alt="">
                         </div>
                     </div>
 
