--- a/laser-engraving.html
+++ b/laser-engraving.html
@@ -120,19 +120,19 @@
                     <!-- Wrapper for slides -->
                     <div class="carousel-inner">
                         <div class="item active">
-                            <img class="img-responsive" src="images/laserengraving1.jpg" alt="">
+                            <img class="img-responsive" src="images/laser/laser-1.jpg" alt="">
                         </div>
                         <div class="item">
-                            <img class="img-responsive" src="images/laserengraving2.jpg" alt="">
+                            <img class="img-responsive" src="images/laser/laser-2.jpg" alt="">
                         </div>
                         <div class="item">
-                            <img class="img-responsive" src="images/Laser_1.jpg" alt="">
+                            <img class="img-responsive" src="images/laser/laser-3.jpg" alt="">
                         </div>
                         <div class="item">
-                            <img class="img-responsive" src="images/Laser_2.jpg" alt="">
+                            <img class="img-responsive" src="images/laser/laser-4.jpg" alt="">
                         </div>
 						<div class="item">
-                            <img class="img-responsive" src="images/Laser_4.jpg" alt="">
+                            <img class="img-responsive" src="images/laser/laser-5.jpg" alt="">
                         </div>
                     </div>
 
