--- a/woodworking.html
+++ b/woodworking.html
@@ -118,13 +118,13 @@
                     <!-- Wrapper for slides -->
                     <div class="carousel-inner">
                         <div class="item active">
-                            <img class="img-responsive" src="images/woodworking-1.jpg" alt="">
+                            <img class="img-responsive" src="images/woodworking/woodworking-1.jpg" alt="">
                         </div>
                         <div class="item">
-                            <img class="img-responsive" src="images/woodworking-2.jpg" alt="">
+                            <img class="img-responsive" src="images/woodworking/woodworking-2.jpg" alt="">
                         </div>
                         <div class="item">
-                            <img class="img-responsive" src="images/woodworking-3.jpg" alt="">
+                            <img class="img-responsive" src="images/woodworking/woodworking-3.jpg" alt="">
                         </div>
                     </div>
 
