changed phone from clickable

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="contact.html">info@tecboylabs.com | (716) 435-5062</a>
+                        <a>info@tecboylabs.com | (716) 435-5062</a>
                     </li>
 					<li>
                         <a href="index.html">Home</a>
