changed contact form to red theme

--- a/contact.html
+++ b/contact.html
@@ -110,9 +110,9 @@
                 <h3>Contact Details</h3>
                 <p><br>Buffalo, NY<br></p>
                 <p><i class="fa fa-phone"></i> 
-                    <abbr title="Phone">P</abbr>: (716) 435-5062</p>
+                    <abbr title="Phone">Phone</abbr>: (716) 435-5062</p>
                 <p><i class="fa fa-envelope-o"></i> 
-                    <abbr title="Email">E</abbr>: <a href="mailto:info@tecboylabs.com">info@tecboylabs.com</a>
+                    <abbr title="Email">Email</abbr>: <a href="mailto:info@tecboylabs.com">info@tecboylabs.com</a>
                 </p>
                 <ul class="list-unstyled list-inline list-social-icons">
                     <li>
@@ -123,14 +123,14 @@
         </div>
         <!-- /.row -->
 
-		<div id="wufoo-ztl2e390kcxul8">
-		Fill out my <a href="https://mortackai.wufoo.com/forms/ztl2e390kcxul8">online form</a>.
+		<div id="wufoo-zxfrv0m06dfxgw">
+		Fill out my <a href="https://tecboylabs.wufoo.com/forms/zxfrv0m06dfxgw">online form</a>.
 		</div>
-		<div id="wuf-adv" style="font-family:inherit;font-size: small;color:#a7a7a7;text-align:center;display:block;">HTML Forms powered by <a href="http://www.wufoo.com">Wufoo</a>.</div>
-		<script type="text/javascript">var ztl2e390kcxul8;(function(d, t) {
+		<div id="wuf-adv" style="font-family:inherit;font-size: small;color:#a7a7a7;text-align:center;display:block;">There are tons of <a href="http://www.wufoo.com/features/">Wufoo features</a> to help make your forms awesome.</div>
+		<script type="text/javascript">var zxfrv0m06dfxgw;(function(d, t) {
 		var s = d.createElement(t), options = {
-		'userName':'mortackai',
-		'formHash':'ztl2e390kcxul8',
+		'userName':'tecboylabs',
+		'formHash':'zxfrv0m06dfxgw',
 		'autoResize':true,
 		'height':'598',
 		'async':true,
@@ -140,9 +140,10 @@
 		s.src = ('https:' == d.location.protocol ? 'https://' : 'http://') + 'www.wufoo.com/scripts/embed/form.js';
 		s.onload = s.onreadystatechange = function() {
 		var rs = this.readyState; if (rs) if (rs != 'complete') if (rs != 'loaded') return;
-		try { ztl2e390kcxul8 = new WufooForm();ztl2e390kcxul8.initialize(options);ztl2e390kcxul8.display(); } catch (e) {}};
+		try { zxfrv0m06dfxgw = new WufooForm();zxfrv0m06dfxgw.initialize(options);zxfrv0m06dfxgw.display(); } catch (e) {}};
 		var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s, scr);
 		})(document, 'script');</script>
+
 
 
 
