new photo, outlined text for better readability

--- a/index.html
+++ b/index.html
@@ -93,38 +93,53 @@
             <li data-target="#myCarousel" data-slide-to="2"></li>
 			<li data-target="#myCarousel" data-slide-to="3"></li>
 			<li data-target="#myCarousel" data-slide-to="4"></li>
+			<li data-target="#myCarousel" data-slide-to="5"></li>
         </ol>
-
+<style>h2	{
+	color: black;
+	text-shadow:
+	-1px -1px 0 #000,
+	1px -1px 0 #000,
+	-1px 1px 0 #000,
+	1px 1px 0 #000;  
+}
+</style>
         <!-- Wrapper for slides -->
         <div class="carousel-inner">
-            <div class="item active">
+			<div class="item active">
+                <div class="fill" style="background-image:url('images/home-1.jpg');"></div>
+                <div class="carousel-caption strokeme">
+                    <h2><font color="white"> Find one and receive a 30% discounted order!</font></h2>
+                </div>
+            </div>
+			<div class="item">
                 <div class="fill" style="background-image:url('images/3d-printing/3d_printer-2.jpg');"></div>
-                <div class="carousel-caption">
-                    <h2>3D Printing</h2>
+                <div class="carousel-caption strokeme">
+                    <h2><font color="white">3D Printing</font></h2>
                 </div>
             </div>
 			<div class="item">
                 <div class="fill" style="background-image:url('images/cnc/cnc-3.jpg');"></div>
                 <div class="carousel-caption">
-                    <h2>CNC</h2>
+                    <h2><font color="white">CNC</font></h2>
                 </div>
             </div>
 			<div class="item">
                 <div class="fill" style="background-image:url('images/electronics/electronics-5.jpg');"></div>
                 <div class="carousel-caption">
-                    <h2>Electronics</h2>
+                    <h2><font color="white">Electronics</font></h2>
                 </div>
             </div>
 			<div class="item">
                 <div class="fill" style="background-image:url('images/laser/laser-3.jpg');"></div>
                 <div class="carousel-caption">
-                    <h2>Laser Engraving</h2>
+                    <h2><font color="white">Laser Engraving</font></h2>
                 </div>
             </div>
             <div class="item">
                 <div class="fill" style="background-image:url('images/woodworking/woodworking-4.jpg');"></div>
                 <div class="carousel-caption">
-                    <h2>Woodworking</h2>
+                    <h2><font color="white">Woodworking</font></h2>
                 </div>
             </div>
         </div>
@@ -174,7 +189,7 @@
                         <h4><i class="fa fa-fw fa-lightbulb-o"></i> Maker, Creator and Inventor</h4>
                     </div>
                     <div class="panel-body">
-                        <p>My name is Jeffrey Reed and I enjoy designing and bringing ideas to life using a combination of modern tools along with traditional methods. I have roughly 30 years of design and fabrication experience!</p>
+                        <p>My name is Jeffrey Reed and I enjoy designing and bringing ideas to life using a combination of modern tools along with traditional methods. I have over 30 years of design and fabrication experience!</p>
                     </div>
                 </div>
             </div>
